Fixed issue with tooltip jumping around

--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@
 
 #tooltip{
     position: absolute;
-    width:100px;
-    top:750px;
+    width:125px;
+    top:700px;
     left:200px;
 }
